Revision history for {{$dist->name}}

{{$NEXT}}

0.803     2019-01-21 15:49:03-08:00 America/Los_Angeles
  - Cleaned up code using tidyall ; perlcritic warnings fixed

0.802     2019-01-15 23:58:56-08:00 America/Los_Angeles
  - Fixed copyright year. Corrected Bug tracker link. Made POD brief and readable.

0.801     2019-01-14 19:40:50-08:00 America/Los_Angeles
  - Improved documentation

0.800     2019-01-14 12:28:23-08:00 America/Los_Angeles
  - Added auto_chomp and multiline_type options in object constructor
  - Added multi-line parser role with Text::Parser::Multiline
  - Added tests and improved code coverage

0.753     2019-01-04 21:38:06-08:00 America/Los_Angeles
  - Skip tests of unreadable files for MSWin32.
  - A safer CSV example in Example 1 & 2. Added tests based on that.
  - Grammatical/typo fixes in POD.

0.752     2019-01-02 20:25:16-08:00 America/Los_Angeles
  - One test fails for superuser. Fixing that.
  - Known issue in MSWin32 seems related to the same thing. Don't know if it gets fixed.
  - Made POD less verbose.

0.751     2019-01-01 20:30:37-08:00 America/Los_Angeles
  - Documentation looks better. Made links where it makes sense. Re-arranged the information better.

0.750     2019-01-01 19:37:50-08:00 America/Los_Angeles
  - Correct problems in test for Win32 platform compatibility.
  - Improve documentation to give examples of what all the functions do.
  - Changed the spec for filehandle() and read()
  - Added tests to cover the new spec.

0.700     2019-01-01 13:20:43-08:00 America/Los_Angeles
  - Some operating systems can read from STDOUT and some cannot. Same goes for output file handles.
  - Improved documentation.
  - Improved code coverage using Devel::Cover for the first time. We now have 99.5% coverage.
  - Added a new method called abort_reading().

0.502     2018-12-29 08:18:06-08:00 America/Los_Angeles
  - STDOUT and other output files don't uniformly respond to the -r test on all operating systems. This will need more work.
