@@ -1,6 +1,9 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Changed implementation to be based on Moose.
+  - Deprecated setting method, added two new methods instead: multiline_type, auto_chomp
+  - Added a new method push_records. Save records internally calls push_records.
 
 0.803     2019-01-21 15:49:03-08:00 America/Los_Angeles
   - Cleaned up code using tidyall ; perlcritic warnings fixed
